--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -458,7 +458,9 @@ A construção de mapas conceituais é muito simples, uma caneta e um pedaço de
 
 Os primeiros programas de computadores criados com este objetivo se limitavam a mostrar apenas os mapas na tela, sem oferecer nenhum recurso adicional a ferramenta. Com a popularização do uso de computadores e da Internet houve um aumento na oferta de aplicações que tem como objetivo a construção de mapas gráficos. Porém há uma grande confusão entre usuários e desenvolvedores sobre a diferença entre mapas conceituais, organogramas e mapas mentais, devido a semelhança entre os diagramas\cite{Perin2014}. Um mapa mental, por exemplo, é muito semelhante a um mapa conceitual pois apresenta ligações entre ideias, mas ao contrario de um mapa mental não possui uma palavra descritiva ligando essas ideias e criando organicidade entre as ideias. Portanto uma aplicação de criação de mapas mentais não permite a construção de um mapa conceitual. 
 
-Na seção 2.3 de sua dissertação de mestrado, \citeonline{Perin2014} realizou uma pesquisa sobre o estado da prática em mapas conceituais. Nela foi feito um levantamento sobre softwares que permitem a criação de mapas conceituais e quais são as funcionalidades oferecidas por eles. Nesta pesquisa ele observou uma carência de ferramentas específicas para a criação de mapas conceituais, sendo o CMapTools a única ferramenta que oferece suporte específico para a manipulação dos mapas.
+Na seção 2.3 de sua dissertação de mestrado, \citeonline{Perin2014} realizou uma pesquisa sobre o estado da prática em mapas conceituais. Nela foi feito um levantamento sobre softwares que permitem a criação de mapas conceituais e quais são as funcionalidades oferecidas por eles. Nesta pesquisa foram avaliadas 16 ferramentas de edição de mapas, das quais apenas o CMapTools foi desenvolvido com o objetivo de oferecer suporte específico para mapas conceituais.
+
+Percebendo esta carência, um grupo de pesquisadores do laboratório de Informática na Educação da Ufes propôs uma plataforma de serviços para mapas conceituais, conhecida por CMPaaS (XXXX, 2010) cujo objetivo é fornecer serviços avançados para facilitar os processos e as aplicações dos mapas conceituais, tanto no ensino quanto no mercado. Neste trabalho, interessa-nos a criação de uma ferramenta integrada ao CMPaaS que proporcione a aplicação dos mapas conceituais na Educação a Distância. 
   
 
 %\lipsum[1]
