--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -428,7 +428,7 @@
 % ---
 % Capitulo de revisão de literatura
 % ---
-\chapter{Mapas conceituais}\label{cap-maps}
+\chapter{Mapas conceituais e educação}\label{cap-maps}
 % ---
 %O que são? Quem criou? Quando surgiu? Quais os benefícios para a educação?
 % ---
@@ -476,7 +476,7 @@ Percebendo esta carência, um grupo de pesquisadores do laboratório de Informá
 % ---
 % primeiro capitulo de Resultados
 % ---
-\chapter{Educação a distância}\label{cap-ead}
+%\chapter{Educação a distância}
 % ---
 %O que é a educação a distância?
 %Qual é a origem da educação a distância?
@@ -485,7 +485,7 @@ Percebendo esta carência, um grupo de pesquisadores do laboratório de Informá
 %O Moodle
 %Mapas conceituais e educação a distância.
 % ---
-\section{Conceitos Básicos de EaD e o Moodle}
+\section{Moodle e EaD}\label{cap-ead}
 
 Segundo \citeonline{chaves1999} EAD é um ensino que ocorre quando há uma separação física entre mestre e aprendiz, sendo utilizadas tecnologias de transmissão de voz, dados e imagens para a comunicação entre ambos. A EAD também é definida no Decreto nº 5.622 de 19 de dezembro de 2005\cite{BRASIL2005}.
  \begin{citacao}
