--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -610,23 +610,7 @@ A estrutura interna da plataforma é composta por cinco camadas: serviços exter
 
 \subsection{Serviços oferecidos}
 
-\chapter{Tecnologias utilizadas}
 
-\section{JavaScript}
-
-O JavaScript é uma linguagem orientada a objeto criada em 1995 por Brendan Eich que foi idealizada para permitir que pessoas que não são programadoras pudessem estender as funcionalidades de sites de Internet\cite{Richards2010}. Ela é uma linguagem interpratada, e apesar de ter sido criada para desenvolvimento web, ela é uma linguagem de proposito geral, e pode ser usada para o desenvolvimento de qualquer tipo de aplicação\cite{flanagan2006}.
-
-Ela foi escolhida para ser utilizada neste projeto pois o editor de mapas diponível no CMPaaS foi desenvolvido com esta tecnlogia e, além disso, trata-se de uma linguagem compatível com todos os navegadores modernos.  
-
-\section{Json}
-
-O JavaScript Object Notation (Json) é uma linguagem em formato de texto cuja função é a serialização de dados estruturados. A serialização é o processo de tranformar objetos em um fluxo de bytes para ser armazenado em um banco de dados ou disco. Ele pode ser utilizado para representar tipos primitivos, como cadeia de caracteres e numeros, ou tipos estruturados, como objetos e vetores\cite{crockford2006}. Ele é utilizado para intercambio de dados entre os serviços da plataforma CMPaaS.  
-
-\section{PHP}
-% ---
-PHP é um acrônimo recursivo para PHP: Hypertext Preprocessor, originalmente ele foi criado como uma linguagem de script estruturada cuja finalidade era o desenvolvimento de aplicações com a funcionalidade de geração de HTML dinâmico. Com o passar do tempo a linguagem evoluiu e passou a oferecer recursos para o desenvolvimento orientado a objeto\cite{minetto2007}.
-
-A plataforma Moodle e seus plugins são desenvolvidos em PHP, por isto esta linguagem foi utilizada neste projeto. 
 
  
 
@@ -681,6 +665,24 @@ Os atores que irão utilizar o plugin são o Estudante, que irá criar e editar 
 	\end{center}
 	\legend{Fonte: Elaborado pelo autor}
 \end{figure} 
+
+\section{Tecnologias utilizadas}
+
+\subsection{JavaScript}
+
+O JavaScript é uma linguagem orientada a objeto criada em 1995 por Brendan Eich que foi idealizada para permitir que pessoas que não são programadoras pudessem estender as funcionalidades de sites de Internet\cite{Richards2010}. Ela é uma linguagem interpratada, e apesar de ter sido criada para desenvolvimento web, ela é uma linguagem de proposito geral, e pode ser usada para o desenvolvimento de qualquer tipo de aplicação\cite{flanagan2006}.
+
+Ela foi escolhida para ser utilizada neste projeto pois o editor de mapas diponível no CMPaaS foi desenvolvido com esta tecnlogia e, além disso, trata-se de uma linguagem compatível com todos os navegadores modernos.  
+
+\subsection{Json}
+
+O JavaScript Object Notation (Json) é uma linguagem em formato de texto cuja função é a serialização de dados estruturados. A serialização é o processo de tranformar objetos em um fluxo de bytes para ser armazenado em um banco de dados ou disco. Ele pode ser utilizado para representar tipos primitivos, como cadeia de caracteres e numeros, ou tipos estruturados, como objetos e vetores\cite{crockford2006}. Ele é utilizado para intercambio de dados entre os serviços da plataforma CMPaaS.  
+
+\subsection{PHP}
+% ---
+PHP é um acrônimo recursivo para PHP: Hypertext Preprocessor, originalmente ele foi criado como uma linguagem de script estruturada cuja finalidade era o desenvolvimento de aplicações com a funcionalidade de geração de HTML dinâmico. Com o passar do tempo a linguagem evoluiu e passou a oferecer recursos para o desenvolvimento orientado a objeto\cite{minetto2007}.
+
+A plataforma Moodle e seus plugins são desenvolvidos em PHP, por isto esta linguagem foi utilizada neste projeto. 
 
 \chapter{Desenvolvimento}
 
